nullaway_error_815A8C75-77F2-4474-9F09-57573FB3DC2D.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-expression/src/main/java/org/springframework/expression/spel/ast/PropertyOrFieldReference.java:137: error: [NullAway] dereferenced expression result.getTypeDescriptor() is @Nullable
                                                Class<?> clazz = result.getTypeDescriptor().getType();
                                                                                           ^
    (see http://t.uber.com/nullaway )
